run and fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ html {
     margin-top: 15px;
     cursor: pointer;
     border: none;
+    appearance: none;
 }
 
 .btn:hover {
